Fix overflow and spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,7 @@
 body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
 }
 
 button {
@@ -105,7 +106,7 @@ body {
 #content {
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 30px;
     width: 100vw;
     justify-content: center;
     align-items: center;
